--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div>
     <div class="stats-container">
       <ul>
-        <li><h3 class="stat-numbers">80K</h3><p class="state-name">Followers</p></li>
-        <li><h3 class="stat-numbers">803K</h3><p class="state-name">Likes</p></li>
-        <li><h3 class="stat-numbers">1.4K</h3><p class="state-name">Photos</p></li>
+        <li><h3 class="stat-number">80K</h3><p class="stat-name">Followers</p></li>
+        <li><h3 class="stat-number">803K</h3><p class="stat-name">Likes</p></li>
+        <li><h3 class="stat-number">1.4K</h3><p class="stat-name">Photos</p></li>
       </ul>
     </div>
   </article>
