1️⃣ first release ready version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
@@ -12,7 +14,7 @@
   <article class="card">
     <div class="details-container">
       <div class="avatar-container"><img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"></div>
-      <div class="details"><h1 class="name">Victor Crest</h1><!--26--><p class="place">London</p></div>
+      <div class="details"><h1 class="name" title="About Victor Crest">Victor Crest</h1><!--26--><p class="place">London</p></div>
     </div>
     <div class="stats-container">
       <ul>
