--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="preload" href="./images/image-victor.jpg">
+  <link rel="preload" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
