🐞 Name focus bugfix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <article class="card">
       <div class="details-container">
         <div tabindex="1" class="avatar-container"><img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"></div>
-        <div tabindex="2" class="details"><h1 class="name" title="About Victor Crest">Victor Crest</h1><p class="place">London</p></div>
+        <div class="details"><h1 class="name" title="About Victor Crest" tabindex="2">Victor Crest</h1><p class="place">London</p></div>
       </div>
       <div class="stats-container">
         <ul>
