--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <main>
     <article class="card">
       <div class="details-container">
-        <div tabindex="1" class="avatar-container"><img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"></div>
-        <div class="details"><h1 class="name" title="About Victor Crest" tabindex="2">Victor Crest</h1><p class="place">London</p></div>
+        <div class="avatar-container"><img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"></div>
+        <div class="details"><h1 class="name" title="About Victor Crest">Victor Crest</h1><p class="place">London</p></div>
       </div>
       <div class="stats-container">
         <ul>
-          <li tabindex="3"><h3 class="stat-number">80K</h3><p class="stat-name">Followers</p></li>
-          <li tabindex="4"><h3 class="stat-number">803K</h3><p class="stat-name">Likes</p></li>
-          <li tabindex="5"><h3 class="stat-number">1.4K</h3><p class="stat-name">Photos</p></li>
+          <li><h3 class="stat-number">80K</h3><p class="stat-name">Followers</p></li>
+          <li><h3 class="stat-number">803K</h3><p class="stat-name">Likes</p></li>
+          <li><h3 class="stat-number">1.4K</h3><p class="stat-name">Photos</p></li>
         </ul>
       </div>
     </article>
