--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 </head>
 <body>
 
-  <main>
     <article class="card">
       <div class="details-container">
-        <div class="avatar-container"><img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"></div>
-        <div class="details"><h1 class="name" title="About Victor Crest">Victor Crest</h1><p class="place">London</p></div>
+        <div class="avatar-container"> <img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"> </div>
+        <div class="details"> 
+          <div class="name-and-age-container"> <h1 class="name" title="About Victor Crest">Victor Crest</h1> <p class="age">26</p> </div>
+          <p class="place">London</p> </div>
       </div>
       <div class="stats-container">
         <ul>
-          <li><h3 class="stat-number">80K</h3><p class="stat-name">Followers</p></li>
-          <li><h3 class="stat-number">803K</h3><p class="stat-name">Likes</p></li>
-          <li><h3 class="stat-number">1.4K</h3><p class="stat-name">Photos</p></li>
+          <li><span class="stat-number">80K</span><span class="stat-name">Followers</span></li>
+          <li><span class="stat-number">803K</span><span class="stat-name">Likes</span></li>
+          <li><span class="stat-number">1.4K</span><span class="stat-name">Photos</span></li>
         </ul>
       </div>
     </article>
-  </main>
 
 </body>
 </html>
