--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="preload" href="./images/bg-pattern-top.svg" as="image">
   <link rel="preload" href="./images/bg-pattern-bottom.svg" as="image">
   <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
+  <script src="./scripts/script.js" defer></script>
+  <script src="./scripts/transitions.js" defer></script>
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
@@ -31,9 +32,11 @@
       </div>
     </article>
 
-    <button class="edit-btn">Edit</button>
-    <button class="save-btn">Save</button>
-    <button class="cancel-btn">Cancel</button>
+    <aside class="edit-btns">
+      <button class="edit-btn">Edit</button>
+      <button class="save-btn">Save</button>
+      <button class="cancel-btn">Cancel</button>
+    </aside>
 
 </body>
 </html>
