--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 
     <article class="card">
       <div class="details-container">
-        <div class="avatar-container"> <img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar"> </div>
+        <div class="avatar-container">
+          <img class="avatar" src="./images/image-victor.jpg" alt="victor's avatar">
+        </div>
         <div class="details"> 
-          <div class="name-and-age-container"> <h1 class="name editable" title="About Victor Crest">Victor Crest</h1> <p class="age editable">26</p> </div>
-          <p class="place editable">London</p> </div>
+          <div class="name-and-age-container"> 
+            <h1 class="name editable" title="About Victor Crest">Victor Crest</h1>
+            <p class="age editable">26</p>
+          </div>
+            <p class="place editable">London</p>
+        </div>
       </div>
       <div class="stats-container">
         <ul>
